Add download script to download OBS Intel DMG

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Package an app
       run: |
         sudo mkdir /out/
+        bash download.sh
         python build_a_pkg.py
     - name: Test with pytest
       uses: actions/upload-artifact@v4.4.3
