--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,3 +38,7 @@ jobs:
           name: artifact.pkg
           # A file, directory or wildcard pattern that describes what to upload
           path: /out/*.pkg
+    - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: /out/*.pkg
