Correct the upload artifact to the correct title, require tag for release

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,14 +31,13 @@ jobs:
         sudo mkdir /out/ && sudo chmod 777 /out/
         bash download.sh
         python build_a_pkg.py
-    - name: Test with pytest
+    - name: Upload pkg
       uses: actions/upload-artifact@v4.4.3
       with:
-          # Artifact name
-          name: artifact.pkg
           # A file, directory or wildcard pattern that describes what to upload
           path: /out/*.pkg
     - name: Release
       uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: /out/*.pkg
