--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,13 +10,11 @@ on:
     branches: [ "obs", "firefox" ]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
@@ -38,6 +36,6 @@ jobs:
           path: /out/*.pkg
     - name: Release
       uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')
+      tag: obs-studio-30.2.3-macos-intel
       with:
         files: /out/*.pkg
