Fix tag_name location in actions yaml

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,6 +36,6 @@ jobs:
           path: /out/*.pkg
     - name: Release
       uses: softprops/action-gh-release@v2
-      tag: obs-studio-30.2.3-macos-intel
       with:
         files: /out/*.pkg
+        tag_name: obs-studio-30.2.3-macos-intel
